Dark mode bg color fix

--- a/css/_colors.scss
+++ b/css/_colors.scss
@@ -82,6 +82,11 @@ html[class='dark_theme'] {
     #profile-grid h2, #profile-grid h3 {
       color: $profile-grid-color;
     }
+    #work-tools li a, #work-tools li {
+      color: $link-color-dark;
+      background-color: #3e3e45;
+      box-shadow: none;
+    }
     @media only screen and (max-width: 600px) {
       .sticky {
         background-color: $header-bg-color-dark;
